methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: not found: value verslAvant
  if (verslAvant==true){
      ^MethodsArgs:10: warning: enclosing method move has result type Unit: return value discarded
  return versLavant
  ^