methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){
  var versLavant:Boolean=false
  if (verslAvant==true){
    avance()
  }
  else{
    recule()
  }
  return versLavant
}